1.优化事件存储相关代码。